# egs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
CMakeModules/: ThirdpartyHelper.cmake
egs/: CMakeLists.txt
egs/core/: CMakeLists.txt  c_api.h  c_wrapper_dle.cxx  c_wrapper_dle.hxx  camera_movement_mixin.cxx  camera_movement_mixin.hxx  compile_shader.cxx  compile_shader.hxx  context.cxx  context.hxx  displaylist.cxx  displaylist.hxx  egs.h  gl_context.cxx  gl_context.hxx  gl_interactivity_keycodes.hxx  gl_interactivity_mixin.cxx  gl_interactivity_mixin.hxx  gl_offscreen_context.cxx  gl_offscreen_context.hxx  glfw_context.cxx  glfw_context.hxx  glip_event_list.c  glip_event_list.h  glip_glfw_context.cxx  glip_glfw_context.hxx  glip_glfw_protocol_impl.c  glip_glfw_protocol_impl.h  glip_glfw_server.c  glip_glfw_server.h  light.cxx  light.h  propertystore.cxx  propertystore.hxx
egs/glip/: CMakeLists.txt  glad.c  glad.h  glip.c  glip.h  glip_impl.c  glip_impl.h
egs/plugins/: CMakeLists.txt
egs/plugins/callback_plugin/: CMakeLists.txt  callback_plugin.cxx  callback_plugin.h  callback_plugin.hxx  callback_plugin.py
egs/plugins/cylinder_plugin/: CMakeLists.txt  cylinder_plugin.cxx  cylinder_plugin.h  cylinder_plugin.hxx  cylinder_plugin.py  frag.glsl  vert.glsl
egs/plugins/image_plugin/: image_plugin.py
egs/plugins/isosurface_plugin/: CMakeLists.txt  isosurface_plugin.cxx  isosurface_plugin.h  isosurface_plugin.hxx
egs/plugins/molecule_plugin/: CMakeLists.txt  calculate_bonds.c  calculate_bonds.h  molecule_plugin.h  molecule_plugin.py
egs/plugins/rendertotexture_plugin/: CMakeLists.txt  frag.glsl  rendertotexture_plugin.cxx  rendertotexture_plugin.h  rendertotexture_plugin.hxx  rendertotexture_plugin.py  surf_frag.glsl  surf_vert.glsl  vert.glsl
egs/plugins/sphere_plugin/: CMakeLists.txt  frag.glsl  gen_sphere_vertices.c  gen_sphere_vertices.h  sphere_plugin.c  sphere_plugin.h  sphere_plugin.py  texture_frag.glsl  texture_vert.glsl  vert.glsl
egs/plugins/triangle_plugin/: CMakeLists.txt  frag.glsl  triangle_plugin.cxx  triangle_plugin.h  triangle_plugin.hxx  vert.glsl
egs/python/egs/: __init__.py  glip.py  plugins.py
examples/: CMakeLists.txt  callback_example.c  callback_example.cxx  callback_example.py  h2o.xyz  molecule_example.c  molecule_example.cxx  molecule_example.py  multiple_window_example.c  multiple_window_example.cxx  multiple_window_example.py
